--- a/actions/gosec-scanner/action.yml
+++ b/actions/gosec-scanner/action.yml
@@ -5,6 +5,6 @@ runs:
   using: 'composite'
   steps:
     - name: Run Gosec Security Scanner
-      uses: securego/gosec@latest
+      uses: securego/gosec@master
       with:
         args: -exclude G204,G301,G302,G304,G306 -tests -exclude-dir \.*test\.* ./...
