--- a/actions/golangci-lint/action.yml
+++ b/actions/golangci-lint/action.yml
@@ -7,5 +7,6 @@ runs:
     - name: Static Code Analysis
       uses: golangci/golangci-lint-action@v6
       with:
+        skip-cache: true
         args: |
-          --timeout 5m --out-${NO_FUTURE}format colored-line-number --enable errcheck,gosimple,govet,ineffassign,staticcheck,typecheck,unused,gocritic,asasalint,asciicheck,errchkjson,exportloopref,forcetypeassert,makezero,nilerr,unparam,unconvert,wastedassign,usestdlibvars
+          --timeout 5m --enable errcheck,gosimple,govet,ineffassign,staticcheck,typecheck,unused,gocritic,asasalint,asciicheck,errchkjson,exportloopref,forcetypeassert,makezero,nilerr,unparam,unconvert,wastedassign,usestdlibvars
