--- a/actions/install-local-artifactory/action.yml
+++ b/actions/install-local-artifactory/action.yml
@@ -14,7 +14,8 @@ runs:
     - name: Install Local Artifactory
       run: |
         go install github.com/jfrog/jfrog-testing-infra/local-rt-setup@latest
-        ~/go/bin/local-rt-setup
+        # Temporarily use version 7.84.17 due to an issue with the automatic token generation mechanism in 7.90
+        ~/go/bin/local-rt-setup --rt-version 7.84.17
       shell: bash
       env:
         RTLIC: ${{ inputs.RTLIC }}
