--- a/actions/install-local-artifactory/action.yml
+++ b/actions/install-local-artifactory/action.yml
@@ -13,11 +13,10 @@ runs:
   steps:
     - name: Install Local Artifactory
       run: |
-        go install github.com/jfrog/jfrog-testing-infra/local-rt-setup@latest
+        go install github.com/jfrog/jfrog-testing-infra/local-rt-setup@main
         # Temporarily use version 7.84.17 due to an issue with the automatic token generation mechanism in 7.90
         ~/go/bin/local-rt-setup --rt-version 7.84.17
       shell: bash
       env:
         RTLIC: ${{ inputs.RTLIC }}
-        GOPROXY: direct
         JFROG_HOME: ${{ inputs.JFROG_HOME }}
