--- a/actions/install-local-artifactory/action.yml
+++ b/actions/install-local-artifactory/action.yml
@@ -13,7 +13,7 @@ runs:
   steps:
     - name: Install Local Artifactory
       run: |
-        go install github.com/jfrog/jfrog-testing-infra/local-rt-setup@main
+        go install github.com/jfrog/jfrog-testing-infra/local-rt-setup@1.2.0
         # Temporarily use version 7.84.17 due to an issue with the automatic token generation mechanism in 7.90
         ~/go/bin/local-rt-setup --rt-version 7.84.17
       shell: bash
