--- a/actions/gosec-scanner/action.yml
+++ b/actions/gosec-scanner/action.yml
@@ -14,7 +14,7 @@ runs:
 
     - name: Install Gosec
       shell: bash    
-      run: go install github.com/securego/gosec/v2/cmd/gosec@latest  # Install the latest version
+      run: curl -sfL https://raw.githubusercontent.com/securego/gosec/master/install.sh | sh -s -- -b $(go env GOPATH)/bin latest
 
     - name: Run Gosec Security Scanner
       shell: bash
