--- a/actions/gosec-scanner/action.yml
+++ b/actions/gosec-scanner/action.yml
@@ -14,7 +14,7 @@ runs:
 
     - name: Install Gosec
       shell: bash    
-      run: curl -sfL https://raw.githubusercontent.com/securego/gosec/master/install.sh | sh -s latest
+      run: curl -sfL https://raw.githubusercontent.com/securego/gosec/master/install.sh | sudo sh -s -- -b $GOPATH/bin
 
     - name: Run Gosec Security Scanner
       shell: bash
